center align fix

--- a/public/stylesheets/caption-hover-effect.css
+++ b/public/stylesheets/caption-hover-effect.css
@@ -1,9 +1,6 @@
 .grid {
 	max-width: 1300px;
-	margin: 0 auto;
 	list-style: none;
-	text-align: center;
-	padding:0;
 }
 
 .grid li {
